<resources>

    <string name="app_name">SampleApp</string>

    <!-- DEFAULTS -->
    <string name="default_zero">0.0</string>
    <string name="default_item">Item</string>
    <string name="default_subitem">Sub Item</string>
    <string name="default_notification_title">Default notification</string>

    <!-- ACTIONS -->
    <string name="action_logout">Sign out</string>
    <string name="action_save">Save</string>
    <string name="action_retry">Retry</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_exit">Exit</string>

    <!-- MESSAGES -->
    <string name="message_logout_confirmation">Are you sure that you want to sign out?</string>
    <string name="message_i_do_nothing">I do nothing!</string>
    <string name="message_all_saved">All changes saved</string>
    <string name="message_no_people_added">You should\nadd people here</string>
    <string name="message_unsaved_changes">
        If you continue, you\'ll lose any changes you made
    </string>
    <string name="message_open_settings">Do you want to open GPS settings?</string>
    <string name="message_disable_location">GPS is disabled, do you want to enable it?</string>
    <string name="message_enable_location">Enable GPS</string>

    <!-- ERRORS -->
    <string name="error_default">An error occurred, try again</string>
    <string name="error_not_found">Oops! Not found</string>
    <string name="error_empty_field">Must provide some text!</string>
    <string name="error_empty_username">Must provide a username</string>
    <string name="error_empty_password">Must provide a password</string>
    <string name="error_unauthorized">Invalid user or password</string>
    <string name="error_wrong_user_name">
        A username only should contain alphanumeric characters (a-Z, 0-9)
    </string>
    <string name="error_all_fields_required">All fields required</string>
    <string name="error_title_no_internet_connection">No Internet connection</string>
    <string name="error_msg_no_internet_connection">
        Please, check your Internet connection and try again
    </string>
    <string name="error_title_disabled_gps">Disabled GPS</string>
    <string name="error_msg_disabled_gps">
        Please, enable GPS to continue
    </string>
    <string name="error_title_empty_field">Text something :)</string>
    <string name="error_msg_empty_field">Must provide some text to continue</string>
    <string name="error_opening_camera">Something went wrong when opening the camera :(</string>
    <string name="error_loading_picture">Something went wrong when loading the picture :(</string>
    <string name="error_missing_permissions">
        Please, grant the required permissions to continue
    </string>

    <!-- LoginActivity -->
    <string name="login_title">Sign in</string>
    <string name="login_user">User</string>
    <string name="login_password">Password</string>

    <!-- MainActivity -->
    <string name="main_title">Dashboard</string>
    <string name="main_list_form">List &amp; Form</string>

    <!-- ListActivity -->
    <string name="list_title">People</string>

    <!-- AccelerometerActivity -->
    <string name="accelerometer_title">Accelerometer</string>
    <string name="accelerometer_x">x =</string>
    <string name="accelerometer_y">y =</string>
    <string name="accelerometer_z">z =</string>

    <!-- FormActivity -->
    <string name="form_title">Basic information</string>
    <string name="form_name">Name</string>
    <string name="form_last_name">Last name</string>
    <string name="form_email">Email</string>
    <string name="form_age">Age</string>
    <string name="form_address">Address</string>
    <string name="form_city">City</string>
    <string name="form_country">Country</string>
    <string name="form_job">Job</string>
    <string name="form_gender">Gender</string>
    <string-array name="form_genders">
        <item>Gender…</item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>

    <!-- CameraActivity -->
    <string name="camera_title">Camera</string>
    <string name="camera_take_picture">Take a picture!</string>

</resources>
