<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.FormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/form_fields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/form_button_save"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/form_text_input_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="5"
                    android:minWidth="60dp"
                    android:theme="@style/MaterialFieldTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/form_edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-10dp"
                        android:background="@drawable/selector_field_material_black"
                        android:ellipsize="end"
                        android:hint="@string/form_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/form_text_input_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="5"
                    android:minWidth="60dp"
                    android:theme="@style/MaterialFieldTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/form_edit_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-10dp"
                        android:background="@drawable/selector_field_material_black"
                        android:ellipsize="end"
                        android:hint="@string/form_last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/form_text_input_email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:minWidth="60dp"
                    android:theme="@style/MaterialFieldTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/form_edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-10dp"
                        android:background="@drawable/selector_field_material_black"
                        android:ellipsize="end"
                        android:hint="@string/form_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/form_text_input_age"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:theme="@style/MaterialFieldTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/form_edit_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-10dp"
                        android:background="@drawable/selector_field_material_black"
                        android:ellipsize="end"
                        android:hint="@string/form_age"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="2"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/form_text_input_address"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:minWidth="60dp"
                    android:theme="@style/MaterialFieldTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/form_edit_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-10dp"
                        android:background="@drawable/selector_field_material_black"
                        android:ellipsize="end"
                        android:hint="@string/form_address"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences|textPostalAddress"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/form_text_input_city"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="5"
                    android:minWidth="60dp"
                    android:theme="@style/MaterialFieldTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/form_edit_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-10dp"
                        android:background="@drawable/selector_field_material_black"
                        android:ellipsize="end"
                        android:hint="@string/form_city"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/form_text_input_country"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="5"
                    android:minWidth="60dp"
                    android:theme="@style/MaterialFieldTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/form_edit_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-10dp"
                        android:background="@drawable/selector_field_material_black"
                        android:ellipsize="end"
                        android:hint="@string/form_country"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/form_text_input_job"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:minWidth="60dp"
                    android:theme="@style/MaterialFieldTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/form_edit_job"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-10dp"
                        android:background="@drawable/selector_field_material_black"
                        android:ellipsize="end"
                        android:hint="@string/form_job"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/form_spinner_gender"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="-16dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/form_button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="1dp"
        android:background="@drawable/selector_primary_button_background_black"
        android:text="@string/action_save"
        android:textColor="@drawable/selector_primary_button_text_color_white"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/form_progress"
        style="@android:style/Widget.Material.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>